@@ -14,14 +14,18 @@ import Git.Sha
 
 {- Gets the reflog for a given branch. -}
 get :: Branch -> Repo -> IO [Sha]
-get = get' []
+get b = get' [] (Just b)
 
-get' :: [CommandParam] -> Branch -> Repo -> IO [Sha]
+{- Gets all reflogs for all branches. -}
+getAll :: Repo -> IO [Sha]
+getAll = get' [Param "--all"] Nothing
+
+get' :: [CommandParam] -> Maybe Branch -> Repo -> IO [Sha]
 get' ps b = mapMaybe extractSha . lines <$$> pipeReadStrict ps'
   where
-	ps' = 
-		[ Param "log"
-		, Param "-g"
-		, Param "--format=%H"
-		, Param (fromRef b)
+	ps' = catMaybes
+		[ Just $ Param "log"
+		, Just $ Param "-g"
+		, Just $ Param "--format=%H"
+		, Param . fromRef <$> b
 		] ++ ps
